# Plinth-Hello-World

./: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  package-lock.json  package.json  prep-index.js  todo.txt  tsconfig.json  vite.config.js  vite.config.ts
src/: bindgen_example.rs  main.rs  my_app.rs  my_rendering.rs
src/plinth/: mod.rs
src/plinth/plinth_core/: app.rs  graphics.rs  mod.rs  plinth_app.rs
src/plinth/plinth_core/shaders/: shader.wgsl
src/plinth/plinth_web/: plinth.tsx  src.html
src/web/: hello_world.css  index.html  index.tsx  main.tsx
src/web/ts/: index.tsx
