[package]
name = "plinth-hello-world"
version = "0.1.1"
edition = "2024"

[features]
default = []

[dependencies]
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
pollster = {version ="0.4.0"}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.100"
plinth-core = "0.1.2"
plinth-util-temp = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
